Fixing tech pages to be way simpler and not a mess on mobile

--- a/theme/static/sass/base.sass
+++ b/theme/static/sass/base.sass
@@ -125,6 +125,8 @@ img.thumbnail, img.article-thumbnail
   vertical-align: center
 
 //display: block
+.h3-size
+  max-height: $heading3Size /2
 
 .next-to-pic
   display: inline-block
